
ADDED:

* Added questions' types and grading modes to the "question_info" cache.

CHANGED:

* The automatic source code download no longer saves cached copies, to avoid
  accidentally filling small disks.

* Upgraded KaTeX to 0.9.0.

DEPRECATED:

REMOVED:

* "questions" is no longer a valid key for tutor.compute_page_stats, as it is
  redundant with "question_info"

FIXED:

* Fixed issue where impersonating a user inherited their API token.

* Prevented scroll bars from showing up in the CAT-SOOP logo at the bottom of
  the page.

* The "question_info" cache is now checked/updated after the pre_handle plugin
  is executed, rather than after.

* "expression" questions now support implicit multiplication by j (the
  imaginary unit).

* Fixed an issue that caused scores in the "problemstate" log to be overwritten
  with `None` when the "check" button was used.

* Entering an empty expression and entering an invalid expression to a
  "pythonic" question now produce the same error message.

* Fixed a bug where API token was not being properly set when impersonating a
  user.

* In the default handler, ensure handle_check creates all problemstate fields
  if they don't already exist.

* The checker script is now aware of the cs_now variable.

* Fixed an issue that caused a misleading error message when the remote Python
  sandbox couldn't be reached.

* Fixed a misleading error message about how to install jose when using the
  "openid_connect" authentication type.

* Fixed a broken link after an error message when using the "openid_connect"
  authentication type.

SECURITY:

* Prevented "as_role"  from affecting the 'role' field in cs_user_info if the
  user does not have the "impersonate" permission.

DOCUMENTATION:


##################
# Version 12.0.0 #
##################

ADDED:

* Added a cache of question information, to avoid having to fake a page load
  to get question information in tutor.compute_page_stats.

CHANGED:
